HttpdBin-ITG-Cluster-v2.yaml
    
---
# httpbin deployment
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: default  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80

---
# httpbin service
---

apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default  
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
