Java-ITG-Cluster-V2.yaml
---
#Config Map for JavaService   
---

---
# SpringBoot itg-gke-sbt-app deployment
---
    
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itg-gke-sbt-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: itg-gke-sbt-app
  template:
    metadata:
      labels:
        app: itg-gke-sbt-app
    spec:
      containers:
        - name: itg-gke-sbt-app
          image: asia-south1-docker.pkg.dev/sigma-zodiac-400712/itg-docker-repo/itg-gke-sbt-app:latest
          ports:
          - containerPort: 8899  
          volumeMounts:
          - name: itg-config-volume
            mountPath: /config
      volumes:
        - name: itg-config-volume
          configMap:
            name: itg-gke-sbt-app-configmap

---
# Backend config for the sb app 
---
# SpringBoot itg-gke-sbt-app service
---

apiVersion: v1
kind: Service
metadata:
  name: itg-gke-sbt-app
#  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8899":"itg-gke-sbt-app-bc"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: itg-gke-sbt-app
  ports:
    - port: 8899
      targetPort: 8899
