Nginx-ITG-Cluster-V2.yaml
# Nginx Service for UI Code deployment

---
#Config Map for UI Nginx code     
---
# Nginx service Deployment     
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-contents
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
            - name: nginx-public
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-public
        configMap:
          name: nginx-index-html-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-static-contents
  namespace: default  
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
