k8singress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx-static-contents
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /anything
            pathType: ImplementationSpecific
            backend:
              service:
                name: httpbin
                port:
                  number: 80    
          - path: /anything/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: httpbin
                port:
                  number: 80
          - path: /sbtapp
            pathType: ImplementationSpecific
            backend:
              service:
                name: itg-gke-sbt-app
                port:
                  number: 8899    
          - path: /sbtapp/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: itg-gke-sbt-app
                port:
                  number: 8899
