secure-app-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: http-svc
      port:
        number: 80
  rules:
    - host: api.0it.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: httpbin
                port:
                  number: 80
          - path: /oauth2/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
